[package]
name = "lakeside"
version = "0.1.3"
edition = "2021"

[dependencies]
cdk = { version = "*" }
tokio = "*"
rand = "*"
cdk-sqlite = "*"
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
csv = "1.3"
axum = { version = "0.7", features = ["macros", "json"] }
tower-http = { version = "0.5", features = ["trace"] }

